---
source: crates/pixi_manifest/src/manifests/workspace.rs
expression: manifest.workspace.pypi_options.clone().unwrap()
---
index-url: ~
extra-index-urls:
  - "https://pypi.org/simple2"
find-links: ~
no-build-isolation: ~
index-strategy: ~
no-build: ~
